# pytermstructure

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
docs/: make.bat  requirements.txt
docs/source/: conf.py  index.rst
src/pytermstructure/: core.py  help_system.py  helpers.py  methods.py
