[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytermstructure"
version = "0.0.1"
authors = [{name = "Marco Gigante"}]
description = "Educational Python library for interest rate term structure estimation"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["finance", "interest-rates", "term-structure", "yield-curve", "quantitative-finance"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/MarcoGigante/pytermstructure"
Repository = "https://github.com/MarcoGigante/pytermstructure"
Issues = "https://github.com/MarcoGigante/pytermstructure/issues"
Documentation = "https://pytermstructure.readthedocs.io"

[tool.setuptools]
packages = ["pytermstructure"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pytermstructure = ["py.typed"]